<resources>
    <string name="app_name">HapticSimulation</string>
    <string name="app_vserion">0.0.7</string>
    <string name="slot_number_1">1</string>
    <string name="slot_number_2">2</string>
    <string name="slot_number_3">3</string>
    <string name="slot_number_4">4</string>
    <string name="action_settings">Settings</string>

    <string name="pref_slot1_key">slot1</string>
    <string name="pref_slot1_label">Button 1</string>
    <string name="pref_slot2_key">slot2</string>
    <string name="pref_slot2_label">Button 2</string>
    <string name="pref_slot3_key">slot3</string>
    <string name="pref_slot3_label">Button 3</string>
    <string name="pref_slot4_key">slot4</string>
    <string name="pref_slot4_label">Button 4</string>
    <string name="pref_slot5_key">slot5</string>
    <string name="pref_slot5_label">ON</string>
    <string name="pref_slot6_key">slot6</string>
    <string name="pref_slot6_label">OFF</string>
    <string name="pref_slot7_key">slot7</string>
    <string name="pref_slot7_label">Hazard ON</string>
    <string name="pref_slot8_key">slot8</string>
    <string name="pref_slot8_label">Hazard OFF</string>
    <string name="pref_default_value">nothing</string>
    <string name="pref_default_label">Nothing</string>
    <string name="error_not_play">Sorry, could not play. The file might be not supported...</string>
    <string name="error_not_selected">Sorry, slot is not selected. Please select a slot to play</string>
    <string name="error_slot_not_assigned">Sorry, this slot  is not assigned any files. Please go setting and set a media file to slot</string>
</resources>
