<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.github.abstractkim.hapticsimulation.MainActivity"
    >

  <TextView
      android:id="@+id/tvSlot1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="71dp"
      android:layout_marginTop="65dp"
      android:text="@string/slot_number_1"
      android:textSize="120sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />
  <TextView
      android:id="@+id/tvSlot2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="71dp"
      android:layout_marginTop="41dp"
      android:text="@string/slot_number_2"
      android:textSize="120sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvSlot1"
      />
  <TextView
      android:id="@+id/tvSlot3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="71dp"
      android:layout_marginTop="41dp"
      android:text="@string/slot_number_3"
      android:textSize="120sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvSlot2"
      />
  <TextView
      android:id="@+id/tvSlot4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="71dp"
      android:layout_marginTop="41dp"
      android:text="@string/slot_number_4"
      android:textSize="120sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvSlot3"
      />
</android.support.constraint.ConstraintLayout>
